--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="description" content="Reader for sevice Reddit.">
     <meta name="keywords" content="reader,Reddit,JavaScript">
     <title>Reader</title>
+    <base href="/reader/">
     <!--<link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">-->
     <link type="text/css" rel="stylesheet" href="assets/build/screen.css" media="all">
 </head>
 
 <body>
-    <aside id="sidebar"></aside>
-    <main id="main"></main>
     <script src="assets/build/reader.min.js" async></script>
 </body>
 </html>
