add styles, fix loaders

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <meta name="description" content="Reader for sevice Reddit.">
     <meta name="keywords" content="reader,Reddit,JavaScript">
     <title>Reader</title>
-    <base href="/reader/">
     <!--<link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">-->
-    <link type="text/css" rel="stylesheet" href="assets/build/screen.css" media="all">
+    <link type="text/css" rel="stylesheet" href="assets/build/styles.css" media="all">
+    <script src="assets/build/reader.min.js" async></script>
 </head>
 
-<body>
-    <script src="assets/build/reader.min.js" async></script>
-</body>
+<body></body>
 </html>
